# New

./: README.md  a.out
C++_Stuff/: #main.cxx#  CMakeLists.txt  CMakeLists.txt~  Sally.cpp  Sally.cpp~  Sally.h  boost_test.cpp  boost_test.cpp~  main.cpp  main.cxx  main.cxx~  new  overload.cpp~
C++_Stuff/C++11/: constructor.cpp  constructor.cpp~  new
C++_Stuff/Friend/: #Rectangle.h#  Rectangle.h~  friend  friend.cpp~  new
C++_Stuff/MPI/Heat_eq/: Makefile  Makefile~  h_data.txt  heat  heat.cxx  x_data.txt
C++_Stuff/MPI/mpitutorial-gh-pages/tutorials/mpi-send-and-receive/code/: ping_pong  send_recv
C++_Stuff/MPI/test/: boost_mpi.cpp  example.c  example2.c  example3.c  hello.c  ping_pong.c  thread.cpp
C++_Stuff/include/: Alg.cxx  Alg.cxx~  CMakeLists.txt  CustomBessel.hpp  CustomSet.hpp  CustomSet.hpp~  Geo.hpp  Map.hpp  Object.hpp  Rectangle.hpp  Rectangle.hpp~  StringVector.hpp  alg1.hpp  boostlib.hpp  boostlib.hpp~  constructor.hpp  constructor.hpp~  geo.hpp  gsl.hpp  gslmat.hpp  gslmat.hpp~  latticepath.hpp  latticepath.hpp~  line.hpp  line.hpp~  maps.hpp  polynomial.hpp~  quadratic.hpp  quadratic.h~  sedgewickalg.hpp  sedgewickalg.hpp~  stringvector.hpp  vector.hpp
C++_Stuff/spreadSheet/: Makefile  People.cpp  People.cpp~  catchExcept.cpp  catchExcept.cpp~  cmake_install.cmake  deck.h  deck.h~  new  new.cpp  new.cpp~  outofRange.cpp  outofRange.cpp~
C++_Stuff/spreadSheet/autoptr/: autoPtr.cpp  autoPtr.cpp~  new
C++_Stuff/spreadSheet/spreadsheet/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Spreadsheet  Spreadsheet1.hpp  Spreadsheet1.hpp~  Spreadsheet1.h~  Spreadsheet2.h  Spreadsheet2.h~  SpreadsheetCell.cpp  SpreadsheetCell.cpp~  SpreadsheetCell.h  SpreadsheetCell.h.in  SpreadsheetCell.h~
C++_Stuff/src/: #friendFunction.cxx#  #matrix.cxx#  23order.cxx  Alg1.cxx~  CMakeLists.txt  CMakeLists.txt~  alg1.cxx  constructor.cxx  constructor.cxx~  friendFunction.cxx  frobnorm.cxx  frobnorm.cxx~  line.cxx  line.cxx~  matrix.cxx  matrix.cxx~  ode.cxx  ode.cxx~  quadratic.cxx  quadratic.cxx~  sedgewick.cxx  sedgewick.cxx~  vector.cxx  vector.cxx~
MISC/: 2and3rd_degree_eq.c~  boost_accum.cpp  boost_array.cxx  boost_array.cxx~  die.cpp  die.cpp~  functional.cpp  gsl_dist.cpp  new  temp  tut1.cpp
mpitutorial-gh-pages/tutorials/mpi-send-and-receive/code/: ring
